{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 103,
  "lineage": "6f06ed5e-6734-3c8c-009f-2c9cd1794031",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b31801e25908267c",
            "association_id": "eipassoc-0a6ded20d9371a0ff",
            "domain": "vpc",
            "id": "eipalloc-0b31801e25908267c",
            "instance": "i-0ada191aece62c5ce",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0683d9213fd8bd897",
            "private_dns": "ip-172-31-17-232.ec2.internal",
            "private_ip": "172.31.17.232",
            "public_dns": "ec2-18-209-254-186.compute-1.amazonaws.com",
            "public_ip": "18.209.254.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.prom",
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a474f912d13c220",
            "association_id": "eipassoc-0ed432ea5188f3de3",
            "domain": "vpc",
            "id": "eipalloc-02a474f912d13c220",
            "instance": "i-0993951fc36765563",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06cfbc20d08b9351b",
            "private_dns": "ip-172-31-23-237.ec2.internal",
            "private_ip": "172.31.23.237",
            "public_dns": "ec2-54-160-171-252.compute-1.amazonaws.com",
            "public_ip": "54.160.171.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.appserver-exporter",
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appserver-exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fba1dd756df8ac0",
            "arn": "arn:aws:ec2:us-east-1:335055665325:instance/i-0993951fc36765563",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0993951fc36765563",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "sreuni",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cfbc20d08b9351b",
            "private_dns": "ip-172-31-23-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.237",
            "public_dns": "ec2-52-91-249-108.compute-1.amazonaws.com",
            "public_ip": "52.91.249.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 144,
                "throughput": 0,
                "volume_id": "vol-05cc7448754ac49b9",
                "volume_size": 48,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-all-my-ip"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb949d2fe6ccb04d",
            "tags": {
              "Name": "demo-exporter-appserver"
            },
            "tags_all": {
              "Name": "demo-exporter-appserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e508d78baad560b3"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c88b8560fd9b0353",
            "arn": "arn:aws:ec2:us-east-1:335055665325:instance/i-0ada191aece62c5ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ada191aece62c5ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "sreuni",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0683d9213fd8bd897",
            "private_dns": "ip-172-31-17-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.232",
            "public_dns": "ec2-18-205-22-24.compute-1.amazonaws.com",
            "public_ip": "18.205.22.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-0f5ad902301cedd38",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-all-my-ip"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb949d2fe6ccb04d",
            "tags": {
              "Name": "demo-prom-server"
            },
            "tags_all": {
              "Name": "demo-prom-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e508d78baad560b3"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335055665325:security-group/sg-0e508d78baad560b3",
            "description": "allow all from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e508d78baad560b3",
            "ingress": [],
            "name": "allow-all-my-ip",
            "name_prefix": "",
            "owner_id": "335055665325",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062fa1743da711edc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "70.224.95.9/32"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3546830827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e508d78baad560b3",
            "security_group_rule_id": "sgr-0243a0aa541368e63",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.instance_sg"
          ]
        }
      ]
    }
  ]
}